fixes chem bounties not showing their description? Tweaks to high priority.

--- a/tgui/packages/tgui/styles/interfaces/CivCargoHoldTerminal.scss
+++ b/tgui/packages/tgui/styles/interfaces/CivCargoHoldTerminal.scss
@@ -8,3 +8,16 @@
     box-shadow: 0 0 0 0 #48abe0;
   }
 }
+
+.Marquee {
+  animation: marquee 5s linear infinite;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
